tests/ui/static_ref.stderr
error[E0597]: `pool` does not live long enough
 --> $DIR/static_ref.rs:4:1
  |
4 | #[pyfunction]
  | ^^^^^^^^^^^^^
  | |
  | borrowed value does not live long enough
  | `pool` dropped here while still borrowed
  | cast requires that `pool` is borrowed for `'static`
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
